# WeakRaytrace

./: .gitignore  CMakeLists.txt  WeakRaytrace.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  sphere.h  vec3.h
